--- a/app/views/president/index.html
+++ b/app/views/president/index.html
@@ -44,10 +44,10 @@
 								  
 								  	<div class="card-body">
 								    	<div class="form-group">
-								    		<p><b>Nombre: </b><%= usuario.nombre %></p>
-								    		<p><b>Apellido: </b><%= usuario.apellido %></p>
-								    		<p><b>Nucleo: </b><%= usuario.nucleoCodigo %></p>
-								    		<p><b>Unidad: </b><%= usuario.unidadCodigo %></p>
+								    		<p><b>Nombre: </b><%= presidente.nombre %></p>
+								    		<p><b>Apellido: </b><%= presidente.apellido %></p>
+								    		<p><b>Nucleo: </b><%= presidente.nucleo.nombre %></p>
+								    		<p><b>Unidad: </b><%= presidente.unidad.nombre %></p>
 								    	</div>
 								  	</div>
 								</div>
