--- a/app/views/president/nucleos/unidad/userPerfil/detallesEval.html
+++ b/app/views/president/nucleos/unidad/userPerfil/detallesEval.html
@@ -37,7 +37,7 @@
 					    <li class="breadcrumb-item" aria-current="page"><a href="/president/nucleos">Nucleos</a></li>
 					    <li class="breadcrumb-item" aria-current="page"><a href="/president/nucleos/unidad/<%- Unidad.codigo %>"><%- Unidad.nombre %></a></li>
 					    <li class="breadcrumb-item" aria-current="page"><a href="/president/nucleos/unidad/<%- Unidad.codigo %>/userPerfil/<%- Usuario.cedula %>"><%- Usuario.nombre %></a></li>
-					    <li class="breadcrumb-item active" aria-current="page"><%- evalUsuario[0].evaluacion.nombre %></li>
+					    <li class="breadcrumb-item active" aria-current="page"><%- Evaluacion.nombre %></li>
 					</ol>
 				</nav>
 			</div>
@@ -90,7 +90,7 @@
 						    	<div class="col-sm-7 col-md-9">
 						    		<h1 class="display-4"><%- Usuario.nombre %> <%- Usuario.apellido %></h1>
 						    		<p class="lead"><%- Usuario.cargo.nombre %></p>
-						    		<p class="lead"><b>Evaluación: </b><%- evalUsuario[0].evaluacion.nombre %></p>
+						    		<p class="lead"><b>Evaluación: </b><%- Evaluacion.nombre %></p>
 						    	</div>
 						    </div>
 						  </div>
@@ -102,6 +102,98 @@
 							<div class="card-body">
 								<div class="article border-bottom">
 									<h3>Calificacion General</h3>
+								</div>
+								<div>
+									<br>
+									<div class="row">
+										<div class="col-md-12">
+											<div class="row">
+												<div class="col-lg-3 col-md-4 col-sm-3">
+													<div class="card">
+														<div class="card-body text-center">
+															<span class="glyphicon glyphicon-log-in"></span><i class="fa fa-user-secret" style="font-size: 30pt;"></i>
+															<hr style="margin: 1px">
+															<p><strong>Total</strong></p>
+														</div>
+													</div>
+												</div>
+												<div class="col-lg-9 col-md-8 col-sm-9 text-center">
+													<br><br>
+													<div class="progress">
+														<div class="progress-bar" role="progressbar" style="width: <%= califiGeneral.calificacion * 20 %>%;" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"><b> <%= Math.trunc(califiGeneral.calificacion) %> Ptos</b></div>
+													</div>
+												</div>		
+											</div>
+											<hr>
+										</div>
+										<br>
+										<div class="col-md-12">
+											<table style="width: 100%">
+												<thead>
+													<th style="width: 40%">Factor</th>
+													<th>Calificacion</th>
+												</thead>
+												<tbody>
+													<% let autoEval = [] %> <!--arreglo que almacena los ptos parciales de los factores en la autoEval-->
+													<% let acumuladorCoEval = [] %> 
+													<% let jefe = [] %> <!-- arreglo que almacena los ptos parciales de los factores en la eval q hace el jefe -->
+													<% let califiParcial = [] %> <!-- arreglo q guarda la calificacion parcial de un factor (autoE+coE+jefe) -->
+													<% let n = [] %> <!-- arreglo q almacena el numero de veces q entro en un cliclo (la pude haber definido como 3 y ya) -->
+													<% califiCoEval = [] %> <!-- arreglo que almacena los ptos parciales de los factores en la coEval -->
+
+													<!--
+														Ciclo que representa el numero de factores que tiene 
+														este instrumento
+													-->
+													<% for(let i = 0; i < Factores.length; i ++) {%>
+														<% if(calificacionFactor && calificacionFactor.length > 0) {%>
+
+															<% autoEval[i] = 0 %>
+															<% acumuladorCoEval[i] = 0 %>
+															<% jefe[i] = 0 %>
+															<% califiCoEval[i] = 0 %>
+															<% califiParcial[i] = 0 %>
+															<% n[i] = 0 %>
+															<tr>
+																<td>
+																	<%- Factores[i].factor.nombre %>
+																</td>
+																<td style="padding: 5px">
+																	<!--
+																		ciclo que representa el numero de calificaciones q tiene un usuario con respecto a los factores pertenecientes a una evaluacion en especifico 
+																	-->
+																	<% for(let j = 0; j < calificacionFactor.length; j ++) {%>
+																		<% if(calificacionFactor[j].factorId == Factores[i].factorId) {%>
+																			<% if(calificacionFactor[j].evaluacion.instrumentId == 1) {%>
+																				<% autoEval[i] = calificacionFactor[j].calificacion * 0.10 %>
+																				
+																			<%} else if(calificacionFactor[j].evaluacion.instrumentId == 2) {%>
+																				<% n[i] = n[i] + 1 %>
+																				<% acumuladorCoEval[i] = acumuladorCoEval[i] + parseFloat(calificacionFactor[j].calificacion) %>	
+																			<%} else if(calificacionFactor[j].evaluacion.instrumentId == 4) {%>
+																				<% jefe[i] = calificacionFactor[j].calificacion * 0.50 %>
+																			<%}%>
+																		<%}%>
+																	<%}%>
+																	<% califiCoEval[i] = (acumuladorCoEval[i] / n[i]) * 0.40%>
+																	<% califiParcial[i] = autoEval[i] + califiCoEval[i] + jefe[i] %>
+																	<div class="progress">
+																	  	<div class="progress-bar" role="progressbar" style="width: <%= califiParcial[i] * 20 %>%;" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"><b><%= (califiParcial[i]).toFixed(2) %> Ptos</b></div>
+																	</div>
+																</td>
+															</tr>
+														<%}%>
+													<%}%>
+												</tbody>
+											</table>	
+										</div>
+
+										<div class="col-md-12">
+											<div class="row">
+												
+											</div>
+										</div>	
+									</div>
 								</div>
 							</div>
 						</div>
