--- a/app/views/president/nucleos/unidad/userPerfil/index.html
+++ b/app/views/president/nucleos/unidad/userPerfil/index.html
@@ -183,7 +183,7 @@
 													<%= Evaluaciones[i].fecha_f.getDate() %>/<%= Evaluaciones[i].fecha_f.getMonth() + 1 %>/<%= Evaluaciones[i].fecha_f.getFullYear() %>
 												</td>
 												<td>
-													<a href="/president/userPerfil/<%- Usuario.cedula %>/eval/<%- Evaluaciones[i].id %>" class="btn btn-primary btn-sm">Ver</a>
+													<a href="/president/userPerfil/<%- Usuario.cedula %>/eval/<%- Evaluaciones[i].id %>" class="btn btn-primary btn-sm" onclick="return verificarFin('<%- Evaluaciones[i].fecha_f %>');">Ver</a>
 												</td>
 											</tr>	
 										<%}%>
@@ -209,5 +209,6 @@
 	<script src="/js/bootstrap.min.js"></script>
 	<script src="/js/jquery.validate.min.js"></script>
 	<script src="/js/main.js"></script>
+	<script src="/js/misFunciones.js"></script>
 </body>
 </html>
