--- a/app/views/coord_ev/instrumento/index.html
+++ b/app/views/coord_ev/instrumento/index.html
@@ -31,7 +31,7 @@
 							<!--=======MIGAS DE PAN=========-->
 							<nav aria-label="breadcrumb" style="margin-top: 1%">
 								<ol class="breadcrumb">
-								    <li class="breadcrumb-item" aria-current="page"><a href="/dashboard">Home</a></li>
+								    <li class="breadcrumb-item" aria-current="page"><a href="/coord_ev">Home</a></li>
 								    <li class="breadcrumb-item active" aria-current="page">Instrumentos</li>
 								</ol>
 							</nav>
