--- a/app/views/partials/coord_eval/navbar.html
+++ b/app/views/partials/coord_eval/navbar.html
@@ -1,5 +1,5 @@
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-	<a class="navbar-brand" href="#">
+	<a class="navbar-brand" href="/coord_ev">
 		<img src="/images/index/CREDIUDO1.png" alt="" style="margin-top:-8px;">
 	</a>
 		
@@ -10,7 +10,7 @@
 	<div class="collapse navbar-collapse navegador" id="navbarSupportedContent">
 		<ul class="navbar-nav mr-auto">
 			<li class="nav-item" v-bind:class="{ active: activar }">
-			    <a class="nav-link" href="/dashboard">Home <span class="sr-only">(current)</span></a>
+			    <a class="nav-link" href="/coord_ev">Home <span class="sr-only">(current)</span></a>
 			</li>
 			      
 			<li class="nav-item dropdown" v-bind:class="{ active: activarEventos }">
