--- a/app/views/partials/index/navbar.html
+++ b/app/views/partials/index/navbar.html
@@ -20,7 +20,7 @@
 					        
 				<div class="dropdown-menu" aria-labelledby="navbarDropdown">
 					<a class="dropdown-item" href="#">Creación, Misión y Propósito</a>
-					<a class="dropdown-item" href="#">Objetivos</a>
+					<a class="dropdown-item" href="/objetivos">Objetivos</a>
 					<a class="dropdown-item" href="#">Funciones</a>
 					<a class="dropdown-item" href="#">Sub Comisiónes</a>
 					<a class="dropdown-item" href="/etapas">Etapas</a>
