Creacion, mision y proposito

--- a/app/views/partials/index/navbar.html
+++ b/app/views/partials/index/navbar.html
@@ -19,7 +19,7 @@
 			    </a>
 					        
 				<div class="dropdown-menu" aria-labelledby="navbarDropdown">
-					<a class="dropdown-item" href="#">Creación, Misión y Propósito</a>
+					<a class="dropdown-item" href="/creacion&mision">Creación, Misión y Propósito</a>
 					<a class="dropdown-item" href="/objetivos">Objetivos</a>
 					<a class="dropdown-item" href="#">Funciones</a>
 					<a class="dropdown-item" href="#">Sub Comisiónes</a>
