--- a/app/views/partials/index/navbar.html
+++ b/app/views/partials/index/navbar.html
@@ -21,7 +21,7 @@
 				<div class="dropdown-menu" aria-labelledby="navbarDropdown">
 					<a class="dropdown-item" href="/creacion&mision">Creación, Misión y Propósito</a>
 					<a class="dropdown-item" href="/objetivos">Objetivos</a>
-					<a class="dropdown-item" href="#">Funciones</a>
+					<a class="dropdown-item" href="/funciones">Funciones</a>
 					<a class="dropdown-item" href="#">Sub Comisiónes</a>
 					<a class="dropdown-item" href="/etapas">Etapas</a>
 					<a class="dropdown-item" href="#">Reglamentos</a>
