--- a/app/views/admin/conocenos/funciones/index.html
+++ b/app/views/admin/conocenos/funciones/index.html
@@ -10,6 +10,10 @@
 	<link rel="stylesheet" type="text/css" href="/css/pace-theme-center-circle.css">
 	<!-- Custom styles for this template -->
     <link href="/css/sticky-footer-navbar.css" rel="stylesheet">
+    
+	<script src="https://cloud.tinymce.com/5/tinymce.min.js"></script>
+  	<script>tinymce.init({selector:'textarea'});</script>
+	
     <!--estilo a mensaje de error-->
 	<style type="text/css">
 	    label.error{
