--- a/app/views/partials/admin/navbar.html
+++ b/app/views/partials/admin/navbar.html
@@ -24,7 +24,7 @@
 					<a class="dropdown-item" href="/admin/conocenos/funciones">Funciones</a>
 					<a class="dropdown-item" href="/admin/conocenos/subComisiones">Sub Comisiónes</a>
 					<a class="dropdown-item" href="/admin/conocenos/etapas">Etapas</a>
-					<a class="dropdown-item" href="#">Reglamentos</a>
+					<a class="dropdown-item" href="/admin/conocenos/reglamentos">Reglamentos</a>
 				</div>
 			</li>
 			      
