--- a/app/views/admin/conocenos/reglamentos/index.html
+++ b/app/views/admin/conocenos/reglamentos/index.html
@@ -133,7 +133,11 @@
 													      <th scope="row"><%- i + 1 %></th>
 													      <td><%- Reglas[i].titulo %></td>
 													      <td>Otto</td>
-													      <td>Otto</td>
+													      <td>
+															<a href="/admin/conocenos/verReglamento/<%- Reglas[i].id %>" target="_blank">
+													      		<p style="font-size: 20pt"><i class="fa fa-file-pdf-o"></i></p>
+															</a>
+													      </td>
 													    </tr>	
 												  	<%}%>
 												  </tbody>
