--- a/app/views/partials/index/navbar.html
+++ b/app/views/partials/index/navbar.html
@@ -24,7 +24,7 @@
 					<a class="dropdown-item" href="/funciones">Funciones</a>
 					<a class="dropdown-item" href="#">Sub Comisiónes</a>
 					<a class="dropdown-item" href="/etapas">Etapas</a>
-					<a class="dropdown-item" href="#">Reglamentos</a>
+					<a class="dropdown-item" href="/reglamentos">Reglamentos</a>
 				</div>
 			</li>
 			      
