--- a/app/views/index/conocenos/etapas/index.html
+++ b/app/views/index/conocenos/etapas/index.html
@@ -5,7 +5,7 @@
 		<title>CREDIUDO | Inicio</title>
 		<link rel="shortcut icon" href="/images/title/favicon-96x96.png">
 
-		<link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
+		<link rel="stylesheet" type="text/css" href="/css/bootstrap.min.css">
 		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 		<script type="text/javascript" src="/js/pace.min.js"></script>
 		<link rel="stylesheet" type="text/css" href="/css/pace-theme-center-circle.css">
@@ -67,9 +67,9 @@
 			</div>
 		</footer>
 
-		<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-		<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
-		<script src="js/bootstrap.min.js"></script>
+		<script src="/js/jquery-3.3.1.min.js"></script>
+		<script src="/js/popper.min.js"></script>
+		<script src="/js/bootstrap.min.js"></script>
 		<script src="/js/main.js"></script>
 	</body>
 </html>
