--- a/app/views/index/conocenos/reglamentos.html
+++ b/app/views/index/conocenos/reglamentos.html
@@ -30,7 +30,7 @@
 							  	<ol class="breadcrumb">
 							    	<li class="breadcrumb-item" aria-current="page"><a href="/">Home</a></li>
 							    	<li class="breadcrumb-item active" aria-current="page">Conocenos</li>
-							    	<li class="breadcrumb-item active" aria-current="page">Objetivos</li>
+							    	<li class="breadcrumb-item active" aria-current="page">Reglamentos</li>
 							  	</ol>
 							</nav>
 							<!--=======FIN MIGAS DE PAN=========-->				
@@ -39,7 +39,7 @@
 						<div class="col-md-12">
 							<div class="jumbotron jumbotron-fluid text-center">
 								<div class="container">
-									<h2 class="display-4">Objetivos</h2>
+									<h2 class="display-4">Reglamentos</h2>
 								</div>
 							</div>
 						</div>
@@ -47,21 +47,31 @@
 						<div class="col-md-12">
 							<div class="container">
 								<div class="row">
-								    <% if(Objetivos) {%>
-										<%- Objetivos.descripcion %>
-								    <%}%>
+									<div class="col-md-3">
+										
+									</div>
+
+									<div class="col-md-9">
+										<div class="embed-responsive embed-responsive-16by9">
+		  									<iframe class="embed-responsive-item" src="../../../../uploads/index/conocenos/reglamentos/constancia.pdf" allowfullscreen></iframe>
+										</div>
+									</div>
+								</div>
+								<br>
 							</div>
 						</div>
 					</div>
 				</div>
-			</div>
 
-			<footer class="footer" style="background: #BEBCB0;">
-				<div class="container">
-					<span class="text-muted">Pie de Pagina</span>
-				</div>
-			</footer>
+				<footer class="footer" style="background: #BEBCB0;">
+					<div class="container">
+						<span class="text-muted">Pie de Pagina</span>
+					</div>
+				</footer>
+			</div>
 		</div>
+
+		
 
 		<script src="/js/jquery-3.3.1.min.js"></script>
 		<script src="/js/popper.min.js"></script>
