--- a/app/views/index/index.html
+++ b/app/views/index/index.html
@@ -9,6 +9,8 @@
 		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 		<script type="text/javascript" src="/js/pace.min.js"></script>
 		<link rel="stylesheet" type="text/css" href="/css/pace-theme-center-circle.css">
+		<!-- Custom styles for this template -->
+    	<link href="/css/sticky-footer-navbar.css" rel="stylesheet">
 	</head>
 
 	<body>
@@ -139,6 +141,12 @@
 				</div>
 			</div>
 		</div>
+
+		<footer class="footer" style="background: #BEBCB0;">
+			<div class="container">
+				<span class="text-muted">Pie de Pagina</span>
+			</div>
+		</footer>
 
 		<script src="/js/jquery-3.3.1.min.js"></script>
 		<script src="/js/popper.min.js"></script>
