--- a/app/views/index/index.html
+++ b/app/views/index/index.html
@@ -5,7 +5,7 @@
 		<title>CREDIUDO | Inicio</title>
 		<link rel="shortcut icon" href="/images/title/favicon-96x96.png">
 
-		<link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
+		<link rel="stylesheet" type="text/css" href="/css/bootstrap.min.css">
 		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 		<script type="text/javascript" src="/js/pace.min.js"></script>
 		<link rel="stylesheet" type="text/css" href="/css/pace-theme-center-circle.css">
@@ -40,7 +40,12 @@
 								<!-- Indicators -->
 								<ul class="carousel-indicators">
 									<li data-target="#demo" data-slide-to="0" class="active"></li>
-								    <li data-target="#demo" data-slide-to="1"></li>
+									<% if(Evaluaciones.length == 1) {%>
+										<li data-target="#demo" data-slide-to="1"></li>
+									<%} else if(Evaluaciones.length == 2) {%>
+										<li data-target="#demo" data-slide-to="1"></li>
+										<li data-target="#demo" data-slide-to="2"></li>
+									<%}%>   
 								</ul>
 
 								<!-- The slideshow -->
@@ -51,42 +56,48 @@
 										    <img src="images/index/eval.jpg" alt="Responsive image" class="img-fluid" style="width: 100%; height: 500px">
 										    <div class="carousel-caption d-none d-md-block">
 												<h5>CREDIUDO</h5>
-												<p>Zona de Evaluaciones</p>
+												<p>Bienvenido</p>
 											  </div>
 									    </div>
 										
-										<% if(Evaluaciones == 0) {%>
-						
-										<%} else {%>
-											<div class="carousel-item">
-												<a href="/dashboard">
-											      	<img src="images/index/eval.jpg" alt="Responsive image" class="img-fluid" style="width: 100%; height: 500px">
+										<% if(Evaluaciones.length > 0) {%>
+											<% for(let i = 0; i < Evaluaciones.length; i ++) {%>
+												<div class="carousel-item">
+													<a href="/dashboard">
+												      	<img src="images/index/eval.jpg" alt="Responsive image" class="img-fluid" style="width: 100%; height: 500px">
 
-											      	<div class="carousel-caption d-none d-md-block">
-												    	<a href="/dashboard" style="color: white">
-													    	<h5>CREDIUDO</h5>
-													    	<p>Evaluacion 2</p>
-												    	</a>
-												  	</div>
-											  	</a>
-										    </div>
+												      	<div class="carousel-caption d-none d-md-block">
+													    	<a href="/dashboard" style="color: white">
+														    	<h5>
+														    		<%- Evaluaciones[i].nombre %>
+														    		(<%- Evaluaciones[i].fecha_i.getDate() %>/<%- Evaluaciones[i].fecha_i.getMonth() + 1%>/<%- Evaluaciones[i].fecha_i.getFullYear() %> - <%- Evaluaciones[i].fecha_f.getDate() %>/<%- Evaluaciones[i].fecha_f.getMonth() + 1%>/<%- Evaluaciones[i].fecha_f.getFullYear() %>)		
+														    	</h5>
+														    	<p>
+														    		<%- Evaluaciones[i].nucleo.nombre %>
+														    		-
+														    		<%- Evaluaciones[i].unidad.nombre %>
+														    	</p>
+													    	</a>
+													  	</div>
+												  	</a>
+											    </div>
+											<%}%>
 										<%}%>
-									    
 									</div>
 								
 
 								<!-- Left and right controls -->
-								<a class="carousel-control-prev" href="#demo" data-slide="prev">
-								    <span class="carousel-control-prev-icon"></span>
-								</a>
-								<a class="carousel-control-next" href="#demo" data-slide="next">
-								    <span class="carousel-control-next-icon"></span>
-								</a>
+								<% if(Evaluaciones.length > 0) {%>
+									<a class="carousel-control-prev" href="#demo" data-slide="prev">
+									    <span class="carousel-control-prev-icon"></span>
+									</a>
+									<a class="carousel-control-next" href="#demo" data-slide="next">
+									    <span class="carousel-control-next-icon"></span>
+									</a>
+								<%}%>
 							</div>
 						</div>
 						<!--=========FIN CARROUSEL========-->
-
-						
 
 						<!--=====SUB COMISIONES========-->
 						<div class="col-md-12">
@@ -98,35 +109,35 @@
 							<section class="row justify-content-md-center">
 								<div class="col-md-10" style="margin-bottom: 2%;">
 									<div class="row justify-content-md-center">
-										<div class="col-md-2 text-center">
+										<div class="col-sm-6 col-md-2 text-center">
 											<a href="">
 												<img src="images/index/nucleos/sucre.png" class="img-fluid" alt="Responsive image">
 												<p>Sub Comisión<br>Nucleo Sucre</p>
 											</a>
 										</div>
 
-										<div class="col-md-2 text-center">
+										<div class="col-sm-6 col-md-2 text-center">
 											<a href="">
 												<img src="images/index/nucleos/monagas.png">
 												<p>Sub Comisión<br>Nucleo Monagas</p>
 											</a>
 										</div>
 
-										<div class="col-md-2 text-center">
+										<div class="col-sm-6 col-md-2 text-center">
 											<a href="">
 												<img src="images/index/nucleos/bolivar.png">
 												<p>Sub Comisión<br>Nucleo Bolivar</p>
 											</a>
 										</div>
 
-										<div class="col-md-2 text-center">
+										<div class="col-sm-6 col-md-2 text-center">
 											<a href="">
 												<img src="images/index/nucleos/nuevaesparta.png">
 												<p>Sub Comisión<br>Nucleo Nueva Esparta</p>
 											</a>
 										</div>
 
-										<div class="col-md-2 text-center">
+										<div class="col-sm-12 col-md-2 text-center">
 											<a href="">
 												<img src="images/index/nucleos/nuevaesparta.png">
 												<p>Sub Comisión<br>Nucleo Nueva Esparta</p>
@@ -137,6 +148,49 @@
 							</section>	
 						</div>	
 						<!--=====FIN SUB COMISIONES========-->
+
+						<!--========Evaluaciones===========-->
+						<div class="col-md-12">
+							<div class="row">
+								<div class="col-md-12 text-center">
+									<h3>Evaluar es Nuestro deber con la Instutución</h3>
+								</div>
+								<div class="col-md-12 text-center">
+									<div class="row">
+										<div class="col-md-4">
+											Personal Admin
+										</div>
+
+										<div class="col-md-4">
+											Centros de Investigacion
+										</div>
+
+										<div class="col-md-4">
+											Personal Docente
+										</div>
+									</div>
+								</div>
+							</div>
+						</div>
+						<!--=====Fin Evaluaciones==========-->
+
+						<!--======Info Estatica============-->
+						<div class="col-md-12 text-center">
+							<div class="row">
+								<div class="col-md-4">
+									Seguimiento
+								</div>
+
+								<div class="col-md-4">
+									Capacitación
+								</div>
+
+								<div class="col-md-4">
+									Trabajo en Equipo
+								</div>
+							</div>
+						</div>
+						<!--=======Fin Info Estatica=======-->
 					</div>
 				</div>
 			</div>
