--- a/app/views/partials/coord_plani/navbar.html
+++ b/app/views/partials/coord_plani/navbar.html
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-expand-lg navbar-light bg-light">
+<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
 	<a class="navbar-brand" href="/coord_plani">
 		<img src="/images/index/CREDIUDO1.png" alt="" style="margin-top:-8px;">
 	</a>
