--- a/app/views/coord_plani/evaluacion/planificar.html
+++ b/app/views/coord_plani/evaluacion/planificar.html
@@ -68,6 +68,30 @@
 						<div class="col-md-9">
 							<div class="row">
 								<div class="col-md-12">
+									<!--=======mensaje de alerta==========-->
+									<% if(message == false) {%>
+
+									<%} else {%>
+										<div class="alert alert-success alert-dismissible fade show" role="alert">
+								            <%= message %>
+								            <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+												<span aria-hidden="true">&times;</span>
+											</button>
+								        </div>
+									<%}%>
+
+									<% if(error == false) {%>
+
+									<%} else {%>
+										<div class="alert alert-danger alert-dismissible fade show" role="alert">
+								            <%= error %>
+								            <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+												<span aria-hidden="true">&times;</span>
+											</button>
+								        </div>
+									<%}%>
+									<!--=======fin mensaje de alerta==========-->
+
 									<div class="card">
 										<div class="card-body">
 											<div class="article border-bottom">
